--- a/architecture/Redis/2、分析.md
+++ b/architecture/Redis/2、分析.md
@@ -37,7 +37,7 @@
   会出现的，expire执行时，是以当前机器的时钟为基准，开始计算过期时间的。可能存在这样的场景：slave因为某种原因卡住了一会，那master发给slave的expire命令，在slave上执行时计算的过期时间就会晚一些。不过这种情况其实还好。 如果在master上查这个key，那master就会马上清理它，然后给slave发DEL也让slave清理掉。 最怕的是，slave时钟走得快，slave很多key本来没过期，却被认为过期了，这就比较麻烦了。如果此时主从切换，那新master会开始清理过期key，严重会引发缓存雪崩。
   
 # Reids内存淘汰策略有哪些？
-    Redis共提供了8中缓存淘汰策略，其中 volatile-lfu 和 allkeys-lfu 是Redis 4.0版本新增的。
+Redis共提供了8中缓存淘汰策略，其中 volatile-lfu 和 allkeys-lfu 是Redis 4.0版本新增的。
 - 1、noeviction 不进行淘汰数据，一旦缓存被写满，再有请求进来，Redis就不再提供服务，而是直接返回错误。Redis用作缓存时，实际的数据集通常都是大于缓存容量的，总会有新的数据要写入缓存，这个策略本身不淘汰数据，也就不会腾出新的缓存空间。我们不把它用在Redis缓存中
 - 2、volatile-ttl:在设置了过期时间的键值对中，移除即将过期的键值对。
 - 3、volatile-random:在设置了过期时间的键值对中，随机移除某个键值对。
@@ -46,10 +46,10 @@
 - 6、allkeys-random:在所有键值对中，随机移除某些key。 
 - 7、allkeys-lru:在所有的键值对中，移除最近最少使用(最近最久未使用)的键值对。 
 - 8、allkeys-lfu:在所有的键值对中，移除最近最不频繁使用的键值对, 或者移除最不经常使用的键值对
-实践建议
-- 通常情况下推荐优先使用 allkeys-lru 策略。 这样可以充分利用 LRU 这一经典缓存算法的优势，把最近最常访问的数据留在缓存中，提升应用的访问性能。 如果你的业务数据中有明显的局部周期性流量(局部冷热数据区分明显)，建议使用 allkeys-lru 策略。
-- 如果业务应用中的数据访问频率相差不大，没有明显的冷热数据区分，建议使用 allkeys- random 策略，随机选择淘汰的数据就行。
-- 如果你的业务中有置顶的需求，比如置顶新闻、置顶视频，那么，可以使用 volatile-lru 策略，同时不给这些置顶数据设置过期时间。这样一来，这些需要置顶的数据一直不会被删除，而其他数据会在过期时根据 LRU 规则进行筛选。
+- 实践建议
+ - 通常情况下推荐优先使用 allkeys-lru 策略。 这样可以充分利用 LRU 这一经典缓存算法的优势，把最近最常访问的数据留在缓存中，提升应用的访问性能。 如果你的业务数据中有明显的局部周期性流量(局部冷热数据区分明显)，建议使用 allkeys-lru 策略。
+ - 如果业务应用中的数据访问频率相差不大，没有明显的冷热数据区分，建议使用 allkeys- random 策略，随机选择淘汰的数据就行。
+ - 如果你的业务中有置顶的需求，比如置顶新闻、置顶视频，那么，可以使用 volatile-lru 策略，同时不给这些置顶数据设置过期时间。这样一来，这些需要置顶的数据一直不会被删除，而其他数据会在过期时根据 LRU 规则进行筛选。
 
 # Redis 中lru算法介绍一下
 - Least Recently Used
