--- a/architecture/Redis/6.缓存击穿.md
+++ b/architecture/Redis/6.缓存击穿.md
@@ -4,3 +4,6 @@
   - 原因：缓存击穿的情况，经常发生在热点数据过期失效时，
   - 解决方案
     - 对于访问特别频繁的热点数据，不设置过期时间。
+    - 预先设置热门数据，在reids高峰访问时期，提前设置热门数据到缓存中，或适当延长缓存中key过期时间
+    - 实时调整，实时监控那些热门数据，实时调整key过期时间
+    - 加锁更新，比如请求查询A，发现缓存中没有，对A这个key加锁，同时去数据库查询数据，写入缓存，在返回给用户，这样后面的请求就可以从缓存中拿到数据了
