--- a/architecture/常见问题.md
+++ b/architecture/常见问题.md
@@ -4,3 +4,22 @@
 - 对某个特定技术的深入理解
 - 团队协作沟通
 
+# 性能优化
+## 现象
+- 比如说：访问慢
+## 设定目标
+- 优化前需要设定基准目标
+- 通过监控等手段采集优化前的指标数据，便于通过指标数据量化优化效果
+## 优化
+- 找到问题瓶颈
+- 设计方案
+- 方案实施
+- 方案测试
+- 上线发布
+  - 灰度，防止影响
+- 线上验证及数据采集
+  - 通过指标判断是否达到预期，比如吞吐量、qps是否上升
+## 总结&复盘
+- 性能优化是一个渐进、迭代的过程,需要逐步、动态地进行。
+- 通过前后的数据判断本次的优化效果，分析补足及优点
+- 针对不足安排下一次优化方向及产生对应的跟进action流程
