--- a/architecture/kafka/1.kafka.md
+++ b/architecture/kafka/1.kafka.md
@@ -229,3 +229,62 @@ Kafka 集群中有一个 broker 的 Controller 会被选举为 Controller Leader
 - 页缓存 + 零拷贝技术
   - PageCache页缓存:Kafka重度依赖底层操作系统提供的PageCache功能。当上层有写操作时，操作系统只是将数据写入 PageCache。当读操作发生时，先从PageCache中查找，如果找不到，再去磁盘中读取。实际上PageCache是把尽可能多的空闲内存 都当做了磁盘缓存来使用。
   - 零拷贝:Kafka的数据加工处理操作交由Kafka生产者和Kafka消费者处理。Kafka Broker应用层不关心存储的数据，所以就不用走应用层，传输效率高
+
+# 消费者
+## 消费方式
+- pull 模式
+  - consumer采用从broker中主动拉取数据。
+  - pull模式不足之处是，如果Kafka没有数 据，消费者可能会陷入循环中，一直返回 空数据。
+- push(推)模式
+  - Kafka没有采用这种方式，因为由broker 决定消息发送速率，很难适应所有消费者的 消费速率。
+
+## 消费者初始化流程
+![img_4.png](img_4.png)
+
+### 详细流程
+![img_5.png](img_5.png)
+- bootstrap.servers 向 Kafka 集群建立初始连接用到的 host/port 列表。
+- key.deserializer & value.deserializer 指定接收消息的 key 和 value 的反序列化类型。一定要写全 类名。
+- group.id 标记消费者所属的消费者组。
+- enable.auto.commit 默认值为 true，消费者会自动周期性地向服务器提交偏移 量。
+- auto.commit.interval.ms 如果设置了 enable.auto.commit 的值为 true， 则该值定义了 消费者偏移量向 Kafka 提交的频率，默认 5s。
+- auto.offset.reset 当 Kafka 中没有初始偏移量或当前偏移量在服务器中不存在 (如，数据被删除了)，该如何处理? earliest:自动重置偏 移量到最早的偏移量。 latest:默认，自动重置偏移量为最 新的偏移量。 none:如果消费组原来的(previous)偏移量 不存在，则向消费者抛异常。 anything:向消费者抛异常。
+- offsets.topic.num.partitions __consumer_offsets 的分区数，默认是 50 个分区。
+- heartbeat.interval.ms Kafka 消费者和 coordinator 之间的心跳时间，默认 3s。 该条目的值必须小于 session.timeout.ms ，也不应该高于 session.timeout.ms 的 1/3。
+- session.timeout.ms Kafka 消费者和 coordinator 之间连接超时时间，默认 45s。 超过该值，该消费者被移除，消费者组执行再平衡。
+- max.poll.interval.ms 消费者处理消息的最大时长，默认是 5 分钟。超过该值，该 消费者被移除，消费者组执行再平衡。
+- fetch.min.bytes 默认 1 个字节。消费者获取服务器端一批消息最小的字节 数。
+- fetch.max.wait.ms 默认 500ms。如果没有从服务器端获取到一批数据的最小字 节数。该时间到，仍然会返回数据。
+- fetch.max.bytes 默认Default: 52428800(50 m)。消费者获取服务器端一批 消息最大的字节数。如果服务器端一批次的数据大于该值 (50m)仍然可以拉取回来这批数据，因此，这不是一个绝 对最大值。一批次的大小受 message.max.bytes (broker config)or max.message.bytes (topic config)影响。
+- max.poll.records 一次 poll 拉取数据返回消息的最大条数，默认是 500 条。
+- partition.assignment.strategy 消费者分区分配策略，默认策略是 Range + CooperativeSticky。Kafka 可以同时使用多个分区分配策略。 可以选择的策略包括:Range、RoundRobin、Sticky、 CooperativeSticky
+
+## 分区的分配&在平衡
+- 一个consumer group中有多个consumer组成，一个 topic有多个partition组成，现在的问题是，到底由哪个consumer来消费哪个 partition的数据。
+- Kafka有四种主流的分区分配策略: Range、RoundRobin、Sticky、CooperativeSticky。 可以通过配置参数partition.assignment.strategy，修改分区的分配策略。默认策略是Range+ CooperativeSticky。Kafka可以同时使用多个分区分配策略。
+### 分区分配策略
+- 分区分配策略之Range
+  - Range 是对每个 topic 而言的。首先对同一个 topic 里面的分区按照序号进行排序，并对消费者按照字母顺序进行排序。
+  - 通过 partitions数/consumer数 来决定每个消费者应该 消费几个分区。如果除不尽，那么前面几个消费者将会多 消费 1 个分区。
+  - 注意:如果只是针对 1 个 topic 而言，C0消费者多消费1 个分区影响不是很大。但是如果有 N 多个 topic，那么针对每 个 topic，消费者 C0都将多消费 1 个分区，topic越多，C0消 费的分区会比其他消费者明显多消费 N 个分区。 容易产生数据倾斜!
+- RoundRobin 分区策略原理
+  - RoundRobin 针对集群中所有Topic而言。
+  - RoundRobin 轮询分区策略，是把所有的 partition 和所有的 consumer 都列出来，然后按照 hashcode 进行排序，最后 通过轮询算法来分配 partition 给到各个消费者。
+- Sticky 以及再平衡
+  - 粘性分区定义:可以理解为分配的结果带有“粘性的”。即在执行一次新的分配之前， 考虑上一次分配的结果，尽量少的调整分配的变动，可以节省大量的开销。
+  - 粘性分区是 Kafka 从 0.11.x 版本开始引入这种分配策略，首先会尽量均衡的放置分区 到消费者上面，在出现同一消费者组内消费者出现问题的时候，会尽量保持原有分配的分 区不变化。
+
+## offset 位移
+- __consumer_offsets 主题里面采用 key 和 value 的方式存储数据。key 是 group.id+topic+ 分区号，value 就是当前 offset 的值。每隔一段时间，kafka 内部会对这个 topic 进行 compact，也就是每个 group.id+topic+分区号就保留最新数据。
+- 自动提交offset
+  - enable.auto.commit:是否开启自动提交offset功能，默认是true
+  - auto.commit.interval.ms:自动提交offset的时间间隔，默认是5s
+- 手动提交offset
+  - 手动提交offset的方法有两种:分别是commitSync(同步提交)和commitAsync(异步提交)。两者的相同点是，都会将本次提交的一批数据最高的偏移量提交;不同点是，同步提交阻塞当前线程，一直到提交成功，并且会自动失败重试(由不可控因素导致，也会出现提交失败);而异步提交则没有失败重试机制，故有可能提交失败。
+  - commitSync(同步提交):必须等待offset提交完毕，再去消费下一批数据。
+  - commitAsync(异步提交) :发送完提交offset请求后，就开始消费下一批数据了。
+- 指定 Offset 消费
+  - auto.offset.reset = earliest | latest | none 默认是 latest。
+  - earliest:自动将偏移量重置为最早的偏移量，--from-beginning
+  - latest(默认值):自动将偏移量重置为最新偏移量。
+  - none:如果未找到消费者组的先前偏移量，则向消费者抛出异常。
