--- a/architecture/常见问题.md
+++ b/architecture/常见问题.md
@@ -23,3 +23,15 @@
 - 性能优化是一个渐进、迭代的过程,需要逐步、动态地进行。
 - 通过前后的数据判断本次的优化效果，分析补足及优点
 - 针对不足安排下一次优化方向及产生对应的跟进action流程
+
+# 未来五年职业规划
+- 核心考察点
+  - 自我认知
+  - 稳定性
+  - 职位认知
+  - 公司认知
+- 案例
+  - 长远规划，在该领域深耕，展示你是有目标，有规划的候选人
+  - 短期规划，自己现在的能力能给公司带来什么
+  - 请问该岗位在公司内部发展规划是咋样的？晋升、培训等
+
