--- a/architecture/Redis/11.bigKey&hotKey.md
+++ b/architecture/Redis/11.bigKey&hotKey.md
@@ -46,7 +46,7 @@
 ### 找出Redis中的大Key与热Key
 #### 使用Redis内置功能发现大Key及热Key
 - 对Redis的大Key热Key已有明确的分析目标时，可以通过如下命令对对应Key进行分析，通过Redis内置命令对目标Key进行分析
-  - debug object命令
+  - debug object 命令
     - 命令能够根据传入的对象（Key的名称）来对Key进行分析并返回大量数据，其中serializedlength的值为该Key的序列化长度，你可能会选择通过该数据来判断对应Key是否符合你的大Key判定标准。
     - 注意Key的序列化长度并不等同于它在内存空间中的真实长度
     - debug object属于调试命令，运行代价较大，并且在其运行时，进入Redis的其余请求将会被阻塞直到其执行完毕。而该命令的运行的时间长短取决于传入对象（Key名）序列化长度的大小，因此，在线上环境中并不推荐使用该命令来分析大Key，这可能引发故障。
@@ -67,7 +67,8 @@
   - GitHub上有大量的开源项目能够实现bigkeys的加强版使结果能够按照配置定制化输出，另外你可也以动手使用SCAN + TYPE并配合上文表格中的命令自己实现一个Redis实例级的大Key分析工具。
   - 该方案的实现方式及返回结果使其不具备精确性与实时性，建议仅作为参考。
 - 通过Redis官方客户端redis-cli的hotkeys参数发现热Key
-  - Redis自4.0起提供了hotkeys参数来方便用户进行实例级的热Key分析功，该参数能够返回所有Key的被访问次数，它的缺点同样为不可定制化输出报告，大量的信息会使你在分析结果时复杂度较大，另外，使用该方案的前提条件是将redis-server的maxmemory-policy参数设置为LFU。
+  - Redis自4.0起提供了hotkeys参数来方便用户进行实例级的热Key分析功，该参数能够返回所有Key的被访问次数，它的缺点同样为不可定制化输出报告，大量的信息会使你在分析结果时复杂度较大
+  - 另外，使用该方案的前提条件是将redis-server的maxmemory-policy参数设置为LFU。
 - 通过业务层定位热Key
   - 指向Redis的每一次访问都来自业务层，因此我们可以通过在业务层增加相应的代码对Redis的访问进行记录并异步汇总分析。该方案的优势为能够准确并及时的分析出热Key的存在，缺点为业务代码复杂度的增加，同时可能会降低一些性能。
 - 使用monitor命令在紧急情况时找出热Key
@@ -76,6 +77,7 @@
 #### 使用开源工具发现大Key
 - 使用redis-rdb-tools工具以定制化方式找出大Key
   - 按照自己的标准精确的分析一个Redis实例中所有Key的真实内存占用并避免影响线上服务，在分析结束后得到一份简洁易懂的报告，redis-rdb-tools是非常好的选择。
+  - https://github.com/sripathikrishnan/redis-rdb-tools
   - 该工具能够对Redis的RDB文件进行定制化的分析，但由于分析RDB文件为离线工作，因此对线上服务不会有任何影响，这是它的最大优点但同时也是它的最大缺点：离线分析代表着分析结果的较差时效性。对于一个较大的RDB文件，它的分析可能会持续很久很久。
 #### 依靠公有云的Redis分析服务发现大Key及热Key
 - CloudDBA是阿里云的数据库智能服务系统，它支持Redis大Key与热Key的实时分析、发现。大Key及热Key分析底层为阿里云Redis内核的Key分析功能，该功能通过Redis内核直接发现并输出大Key热Key的相关信息，因此，该功能的分析结果准确性高效且对性能几乎无任何影响
@@ -89,6 +91,7 @@
   - 如将一个含有数万成员的HASH Key拆分为多个HASH Key，并确保每个Key的成员数量在合理范围，在Redis Cluster结构中，大Key的拆分对node间的内存平衡能够起到显著作用。
 - 对大Key进行清理
   - 将不适合Redis能力的数据存放至其它存储，并在Redis中删除此类数据。需要注意的是，我们已在上文提到一个过大的Key可能引发Redis集群同步的中断，Redis自4.0起提供了UNLINK命令，该命令能够以非阻塞的方式缓慢逐步的清理传入的Key，通过UNLINK，你可以安全的删除大Key甚至特大Key。
+  - 小于redis4.0版本，先将待删除的key重命名(防止删除期间被调用)，通过scan循环获取这个key的部分数据分批进行删除。
 - 时刻监控Redis的内存水位
   - 突然出现的大Key问题会让我们措手不及，因此，在大Key产生问题前发现它并进行处理是保持服务稳定的重要手段。我们可以通过监控系统并设置合理的Redis内存报警阈值来提醒我们此时可能有大Key正在产生，如：Redis内存使用率超过70%，Redis内存1小时内增长率超过20%等。
   - 通过此类监控手段我们可以在问题发生前解决问题，如：LIST的消费程序故障造成对应Key的列表数量持续增长，将告警转变为预警从而避免故障的发生。
@@ -112,3 +115,7 @@
   - 阿里云数据库Redis会根据高效的排序和统计算法识别出实例中存在的热点Key，开启该功能后，Proxy点会根据设定的规则缓存热点Key的请求和查询结果（仅缓存热点Key的查询结果，无需缓存整个Key），当在缓存有效时间内收到相同的请求时Proxy会直接返回结果至客户端，无需和后端的Redis分片执行交互。在提升读取速度的同时，降低了热点Key对数据分片的性能影响，避免发生请求倾斜。
   - 来自客户端的同样的请求无需再与Proxy后端的Redis进行交互而由Proxy直接返回数据，指向热Key的请求由一个Redis节点承担转为多个Proxy共同承担，能够大幅度降低Redis节点的热Key压力，同时Tair的QueryCache功能还提供了大量的命令来方便用户查看、管理，如通过querycache keys命令查看所有被缓存热Key，通过querycache listall获取所有已缓存的所有命令等。
   - Tair QueryCache智能化的热Key判定与缓存联动功同样能够降低运维及研发的工作负担。 与传统的Redis同步中间件相比，阿里云Redis全球分布式缓存具有高可靠性、高吞吐低延迟、同步正确性高等特点。
+
+## 参考
+- https://developer.aliyun.com/article/788271?utm_content=m_1000291945
+- https://developer.aliyun.com/article/847324?spm=5176.26934562.main.1.b7d94d9edDxIqx （阿里云规范）
