--- a/architecture/个人介绍.md
+++ b/architecture/个人介绍.md
@@ -1,3 +1,8 @@
 # 个人介绍版本1
 面试官，你好，我是xxx，我是一个有着多年工作经验的老兵，先后就职于歌尔，阿里巴巴、苏宁、慧策、中国电信等知名企业，曾担任架构师、技术专家、技术经理等岗位，
 个人有7年多架构经验，曾经参与过日活过亿系统架构设计与落地，比较擅长分布式架构、微服务拆分、大数量、高并发系统处理，对基础组件、中间件、低代码平台、监控平台建设都有丰富的经验，多次从零到一参与系统建设，多年架构管理经验，团队最多的时候20人+，比较擅长用敏捷方式指导团队
+
+# 个人优势有那些
+- 1、有良好的业务洞察意识（案例：慧策快递批量修改）
+- 2、自驱能力、学习力强（案例：学习togaf、babok等）
+- 3、责任心强 ,具有一定的团队合作能力 、快速执行能力
