--- a/architecture/常见问题.md
+++ b/architecture/常见问题.md
@@ -35,3 +35,46 @@
   - 短期规划，自己现在的能力能给公司带来什么
   - 请问该岗位在公司内部发展规划是咋样的？晋升、培训等
 
+# 问过往遇到过的技术挑战和业务挑战是么？
+- *STAR法则*是情境(situation)、任务（task）、行动(action)、结果(result)四项的缩写
+
+# 你有没有什么问题想问我的？
+- 工作详细内容、发展方向、有什么期待
+- 培训、晋升、岗位的具体要求和职责、上岗时间
+- 公司的发展历程、办公氛围、发展方向
+- 案例
+  - 1、如果我应聘上了这个职位，我的工作详细内容是什么呢？我希望能提前准备一些
+  - 2、后期我想在此岗位上晋升的话，应该往哪一个方面发展呢？
+  - 3、你对我这个岗位有什么期待呢？我会努力往这个方向提升？
+  - 4、公司的培训、晋升机制是怎么样的呢？
+  - 5、这个岗位具体的要求和职责是什么呢？
+  - 6、主动询问上岗时间？
+  - 7、可以给我讲讲公司的发展历程吗？
+  - 8、公司的办公氛围怎么样呢？
+  - 9、公司近几年的发展方向是什么呢？
+  - 10、您觉得我还有哪些地方不符合这个职位的需要的条件？
+
+# 如何回答架构设计方案
+- 用架构师的视觉回答架构设计方案，从全局技术视觉阐述设计的过程。这里的全局包括**空间全局**和**时间全局**，在空间全局上你要看到整个系统的领域边界，在时间全局上你要看到整个系统的发展周期。
+- 解决技术问题的方法有很多，这都是“术”，但解决技术问题的底层思维逻辑都是一样的，这是“道”。
+- 系统设计介绍，相比具体的技术问题而言，没有非常准确的答案，是属于开放式的问题。这种问题往往更加能够体现出一个面试人员的综合素质。体现面试人员是否真的完全理解项目的整体背景和来龙去脉，从业务的背景、复杂度、所处的解决入手，结合公司的实际技术体系，综合考虑实现成本、难度、风险、可行性等多方面的因素，选择出最适合当下场景的技术方案，才是一个优先面试人员该有的能力。
+- 作为技术人，考虑问题的方式要比具体的选型结果更为重要，这个是面试的加分点。
+- 不要陷入某个纯粹的技术点的优劣之争，那样很难有结果，越大的项目越明显。通常来说，方案没有优劣之分，而是要看那个更适合当下的问题，只要架构满足一个时期内的业务发展就可以。
+## 四个层面的答案-》参考
+- 谈复杂度来源
+  - 正确的分析系统的复杂度，才能明确设计原则，进而设计架构方案
+  - 如何正确评估系统的复杂度
+    - 功能性复杂度
+      - 高性能、高可用、高扩展
+      - 产品业务发展快速、系统越来越多，协作效率越来越低下
+    - 非功能性复杂度
+      - 安全性、低成本
+  - 要注意结合具体的业务场景和业务发展阶段来阐述，业务场景表明业务的独特性，发展阶段表明了业务的成熟度，因为同一业务场景在不同阶段产生的矛盾也是不同的。
+- 谈解决方案
+  - 三套方案，明确可行性及优缺点
+  - 有价值的解决方案一定是建立在明确复杂度来源基础之上的，所以在设计架构的时候才分主要问题和次要问题，主要问题是必须要解决的点，次要问题可以根据实际情况进行取舍。
+- 谈评估标准
+  - 至少要从功能性、非功能性两个角度出发判断方案的合理性。对于很难解决的方案，要从更高的视觉（比如技术负责人、业务负责人的角度）进行考量
+- 说技术实现
+  - 在技术实现细节上，要尽量讲出技术的实现原理，不要浮于表面的框架组合。
+  - 技术的落地实现方式和深层原理
