--- a/architecture/架构设计/3.技术选型.md
+++ b/architecture/架构设计/3.技术选型.md
@@ -3,3 +3,21 @@
 - 2、成本（是否付费、迁移成本、学习成本、维护成本），充分考虑当前团队的基础设施、人员能力、技术氛围
 - 3、兼容公司当前的技术栈
 - 4、前瞻性设计
+
+# 技术选型原则2
+- 1、**技术社区活用度与文档完备性**
+- 2、**是否经过大量的一线大厂商用与落地验证**
+- 3、**技术组件与其配套的成熟度**
+- 4、**技术组件底层实现模型与安全**
+- 5、**产品核心业务场景的特点**
+- 6、**投入资源、成本、时间的平衡**
+
+# 技术选型原则3
+- 切合业务
+- 技术社区活用度与文档完备性
+- 团队整体的技术水平
+- 版本更新迭代周期
+- 试错精神 敢于踏出第一步，但是千万不要再线上环境进行操作，线上环境要保守一些，稳定为王。
+- 安全性 需要考虑到各种安全问题，包括但不限于Web安全、网络安全等。
+- 成功案例 多学习项目上的成功经验，可以减少很多投入成本。
+- 开源精神
