--- a/architecture/个人介绍.md
+++ b/architecture/个人介绍.md
@@ -6,3 +6,17 @@
 - 1、有良好的业务洞察意识（案例：慧策快递批量修改）
 - 2、自驱能力、学习力强（案例：学习togaf、babok等）
 - 3、责任心强 ,具有一定的团队合作能力 、快速执行能力
+
+# 个人职责
+- 爱信诺征有限公司（岗位职责）
+  - 统一技术架构，统一技术规范，构建技术工具链，提升研发效率
+  - 负责平台、产品、重大项目的技术路线选择，技术架构设计
+  - 负责新系统架构设计，已有系统架构优化调优，并组织评审
+  - 负责重点、难点技术问题攻关，先进技术的跟踪、预研
+  - 负责研发人员的技术能力提升
+  - 承办公司领导及本部门交办的其他事项
+- 丈八网安
+  - 负责部门产品的总体设计与核心代码开发，应用系统架构设计，开发框架搭建，开发规范指定，核心算法编写，指导开发团队进行业务模块代码编写等
+  - 负责优化现有产品架构，设计新的架构，解决现有技术架构的瓶颈，解决现有产品优化升级的技术问题
+  - 负责产品的创新迭代，站在业务角度负责信息技术应用与创新，产品升级迭代，解决技术难点以及技术设计方案的落地
+  - 负责制定部门技术规划，参与部门产品及项目的技术评审
