--- a/architecture/ddd/1.ddd.md
+++ b/architecture/ddd/1.ddd.md
@@ -1,12 +1,10 @@
 # DDD
 ## MVC设计存在的问题
-
 1. MVC模式仅仅反应了软件层面的架构，它不包含业务语言，无法使用该设计直接和业务对话。
 2. MVC模式天然切割了数据和行为，然后用数据库实现数据，用服务实现行为，容易造成需求的首尾分离。
 3. 缺乏明确的边界划分，至少在顶层设计层面没有边界划分的规范要求，更多地是靠技术负责人根据经验进行划分，大规模团队协作容易出现职责不清晰、分工不明确。
 
 ## 领域驱动优势
-
 1. 通过模型直接反映软件实现的结构。
 2. 以模型为基础形成团队的统一语言。
 3. 把模型作为精粹的知识，用于传递。
@@ -16,20 +14,45 @@
 - 面向业务建模： 领域模型和数据模型分离，业务复杂度和技术复杂度分离。DDD聚焦于领域模型，将技术实现细节从模型中剥离出来，能够更好地降低业务和技术的耦合度。
 - 边界清晰的设计方法： 通过对需求的识别及分类，划分出领域、子域和限界上下文，进而指导团队成员分工协作，从而做到将复杂的问题分而治之地解决。
 - 业务领域的知识沉淀： 通过模型与软件实现关联，统一语言与模型关联，反复论证和提炼模型，使得模型与业务的真实世界保持一致，从而促使业务知识通过模型得以传递和沉淀，
+### DDD名词
+- 实体（Entity）
+  - 通过一个唯一标识字段来区分真实世界中的每一个个体的领域对象（实体 = 唯一身份标识 + 可变性）
+  - 在实体的生命周期内，无论其如何变化，其仍旧是同一个实体。
+    - 实体本身是有状态的；
+    - 实体有严谨的生命周期；
+    - 实体本身会体现出相应的业务行为；
+    - 业务行为会被实体属性/状态造成影响和改变。
+- 值对象（ValueObject）
+  - 代表的是真实世界中哪些一成不变、本质性的事物，这样的领域对象叫做“值对象”。当一个对象用于对事物进行描述而没有唯一标识时，它被称为值对象。（值对象 = 值 + 对象 = 将一个值用对象的方式进行表述， 来表达一个具体的固定不变的概念。 ）
+  - 本身无状态，不可变，并且不分配具体的标识。
+  - 本身无生命周期，也不会产生独立行为
+  - 在实践中，需要保证值对象创建后就不能被修改，即不允许外部载修改其属性。
+- 实体与值对象区别
+  - 可变性是实体的特点，不变性是值对象的本质。
+- 聚合根(AggregateRoot)
+  - 是一组相关对象的集合，作为一个整体被外界访问，聚合根就是这个聚合的根节点。
+  - 领域模型内的实体和值对象就好比个体，而能让实体和值对象协同工作的组织就是聚合，它用来确保这些领域对象在实现共同的业务逻辑时，能保证数据的一致性。把聚合比作组织，那聚合根就是这个组织的负责人。聚合根也称为根实体，它不仅是实体，还是聚合的管理者。
+  - 首先它作为实体本身，拥有实体的属性和业务行为，实现自身的业务逻辑
+  - 其次它作为聚合的管理者，在聚合内部负责协调实体和值对象按照固定的业务规则协同完成共同的业务逻辑。
+  - 最后在聚合之间，它还是聚合对外的接口人，以聚合根ID关联的方式接受外部任务和请求，在上下文内实现聚合之间的业务协同。也就是说，聚合之间通过聚合根ID关联引用，如果需要访问其它聚合的实体，就要先访问聚合根，再导航到聚合内部实体，外部对象不能直接访问聚合内实体。
+#### 特点
+- 聚合根是实体，有实体的特点，具有全局唯一标识，有独立的生命周期。 一个聚合只有一个聚合根，聚合根在聚合内对实体和值对象采用直接对象引用的方式进行组织和协调，聚合根与聚合根之间通过 ID 关联的方式实现聚合之间的协同
+- 实体有 ID 标识，通过 ID 判断相等性，ID 在聚合内唯一即可。状态可变，它依附于聚合根，其生命周期由聚合根管理。 实体一般会持久化，但与数据库持久化对象不一定是一对一的关系。 实体可以引用聚合内的聚合根、实体和值对象。
+- 值对象无 ID，不可变，无生命周期，用完即扔。 值对象之间通过属性值判断相等性。 它的核心本质是值，是一组概念完整的属性组成的集合，用于描述实体的状态和特征。 值对象尽量只引用值对象。
 
 ### 战略设计
 - 战略设计是根据用户旅程分析，找出领域对象和聚合根，对实体和值对象进行聚类组成聚合，划分限界上下文，建立领域模型的过程。
 - 战略设计采用的方法是事件风暴，包括：产品愿景、场景分析、领域建模和微服务拆分等几个主要过程。
-    - 产品愿景是对产品顶层价值设计，对产品目标用户、核心价值、差异化竞争点等信息达成一致，避免产品偏离方向。产品愿景分析对于初创系统明确系统建设重点，统一团队建设目标和建立通用语言是很有价值的。
-    - 事件风暴时，所有参与者针对每一个要点，在贴纸上写出自己的意见，贴到白板上。事件风暴主持者会对每个贴纸，讨论并对发散的意见进行收敛和统一，形成产品愿景图。
-    - 场景分析是从用户视角出发，探索业务领域中的典型场景，产出领域中需要支撑的场景分类、用例操作以及不同子域之间的依赖关系，用以支撑领域建模。
-    - 领域建模是通过对业务和问题域进行分析，建立领域模型。向上通过限界上下文指导微服务边界设计，向下通过聚合指导实体对象设计。
-        - 领域建模是一个收敛的过程，分三步：
-            - 第一步找出领域实体和值对象等领域对象；（根据场景分析，分析并找出发起或产生这些命令或领域事件的实体和值对象，将与实体或值对象有关的命令和事件聚集到实体。）
-            - 第二步找出聚合根，根据实体、值对象与聚合根的依赖关系，建立聚合；（定义聚合前，先找出聚合根，然后找出与聚合根紧密依赖的实体和值对象。）
-            - 第三步根据业务及语义边界等因素，定义限界上下文。
-    - 微服务拆分
-        - 理论上一个限界上下文就可以设计为一个微服务，但还需要综合考虑多种外部因素，比如：职责单一性、敏态与稳态业务分离、非功能性需求（如弹性伸缩、版本发布频率和安全等要求）、软件包大小、团队沟通效率和技术异构等非业务要素。
+  - 产品愿景是对产品顶层价值设计，对产品目标用户、核心价值、差异化竞争点等信息达成一致，避免产品偏离方向。产品愿景分析对于初创系统明确系统建设重点，统一团队建设目标和建立通用语言是很有价值的。
+  - 事件风暴时，所有参与者针对每一个要点，在贴纸上写出自己的意见，贴到白板上。事件风暴主持者会对每个贴纸，讨论并对发散的意见进行收敛和统一，形成产品愿景图。
+  - 场景分析是从用户视角出发，探索业务领域中的典型场景，产出领域中需要支撑的场景分类、用例操作以及不同子域之间的依赖关系，用以支撑领域建模。
+  - 领域建模是通过对业务和问题域进行分析，建立领域模型。向上通过限界上下文指导微服务边界设计，向下通过聚合指导实体对象设计。
+    - 领域建模是一个收敛的过程，分三步：
+      - 第一步找出领域实体和值对象等领域对象；（根据场景分析，分析并找出发起或产生这些命令或领域事件的实体和值对象，将与实体或值对象有关的命令和事件聚集到实体。）
+      - 第二步找出聚合根，根据实体、值对象与聚合根的依赖关系，建立聚合；（定义聚合前，先找出聚合根，然后找出与聚合根紧密依赖的实体和值对象。）
+      - 第三步根据业务及语义边界等因素，定义限界上下文。
+  - 微服务拆分
+      - 理论上一个限界上下文就可以设计为一个微服务，但还需要综合考虑多种外部因素，比如：职责单一性、敏态与稳态业务分离、非功能性需求（如弹性伸缩、版本发布频率和安全等要求）、软件包大小、团队沟通效率和技术异构等非业务要素。
 
 - 战略设计阶段建议参与人员：领域专家、业务需求方、产品经理、架构师、项目经理、开发经理和测试经理。
 
