--- a/architecture/泛问题/团队建设/如何让团建活动不再“收效甚微”？.md
+++ b/architecture/泛问题/团队建设/如何让团建活动不再“收效甚微”？.md
@@ -5,13 +5,29 @@
 
 ## 误区
 - 第一个误区，就是认为团建活动是万能的。
+  - 团建活动直接影响的是员工间的协作默契和团队上的团队文化。
+  - 任何一次团建活动都能取得以上两个方面的效果吗？
 - 第二个误区，就是认为团建活动理所应当就有效果。
+  - 很多时候团建活动“收效甚微”，就是由于缺乏设计导致的。缺乏设计，才是活动效果不好的主因。
 - 第三个误区，团建活动是部门助理、HR 或行政的事情，管理者配合就好。
+  - 今后请务必以主人翁的姿态来看待团建活动，原因如下：
+    - 1、从收益看。团建活动的主体和对象，即团队，是你的，所以活动能够在团建方面给你带来哪些帮助，是你要考虑的，这就是所谓的团建的初衷和目的。部门助理、HR 和行政只是在帮你达成这个效果而已。如果你不操心这事，又怎么期待效果恰好如你预期呢？
+    - 2、从成本看。你付出了最大的成本，如果你不考虑收益，你就亏大了。千万别觉得团建活动只是花了你团队一些预算，其实更大的成本是整个团队要把这么多时间投入进来，这个时间和人力成本是很昂贵的。而且员工还投入了自己的意愿和耐性，你不能默认每个员工都是愿意参加活动的，也许很多人只是因为“团队活动不好推托”才参加的。所以，你能给大家带来什么效果才对得起这个成本呢？
+  - 无论从期待的收益，还是投入的成本，你都是最在乎的那个人。因此，从现在开始，做团队活动的主人，与部门助理、HR 和行政同事，一起去筹划，而不是完全假手于人
 
 ## 团建活动的出发点
 - 1、以团队需要为初衷。比如提高员工积极性、提升团队凝聚力、打造团队文化、提升斗志、提升团队韧劲等
 - 2、以员工需要为初衷。常见的是调节放松，一段高强度工作之后，缓解员工的精神压力和紧张情绪。
 - 3、以个人需要为初衷。比如，认为团建只是一项管理任务，需要时不时执行一次；或者只是单纯出于个人需要。
-- 
-*** 只有把团队建设作为初衷的活动才叫做团建活动，而不是所有的活动都属于团建活动。***
+**只有把团队建设作为初衷的活动才叫做团建活动，而不是所有的活动都属于团建活动。**
 
+## 团建初衷不清晰带来的问题
+- 期待模糊：指没有厘清这次团建活动要达成的效果，甚至还把团队诉求、员工诉求和个人诉求揉在一起。
+- 期待过高：希望通过一次或几次团建就能打造出有凝聚力、有战斗力的团队，这种想法是很魔幻的。
+  
+
+## 如何才能做出“收效显著”的团建活动呢？
+- 第一问，关乎初衷：你是想做团建活动，还是调节放松，或是其他？
+- 第二问，关乎角色：是你想做团建活动，还是只想配合一下助理、HR 或行政的工作？
+- 第三问，关乎目标：你想达成团建的什么效果？默契还是文化？
+- 第四问，关乎手段：活动方案和你的目标匹配吗？
