--- a/architecture/泛问题/团队建设/如何和低绩效员工谈绩效？.md
+++ b/architecture/泛问题/团队建设/如何和低绩效员工谈绩效？.md
@@ -2,6 +2,8 @@
 - 有没有和低绩效员工谈绩效的方法和技巧
 - 为什么说绩效沟通的核心，其实并不在沟通上
 - 和低绩效员工沟通绩效，是众多管理者都觉得很头疼的事情，那么，为什么这个事情这么令人头疼呢？
+  - 把“低绩效”和“坏消息”划上了等号，而事实上，划上等号就意味着你误会了绩效沟通的目的。
+  - 无论是不情愿沟通“坏消息”，还是内心有歉疚和忧虑的负担，都是因为把绩效沟通的焦点放在了绩效结果和对结果的传递上，而没有看到绩效沟通有更重要的意义和价值。
 
 ## 良好的绩效沟通要达到哪些目的？收获哪些价值呢？
 - 对齐。绩效沟通的过程，其实是很好的对齐双方观点的机会。你们可以互相同步自己的信息，听取对方对于这些事实的看法和判断，了解对方在乎的焦点在哪里，交换双方对于同一个结果的评价标准，等等。所以，一个有效的绩效沟通，会在事实信息、逻辑判断、双方意图、评价标准等多个层面上进行对标，从而达成共识。
@@ -31,8 +33,8 @@
   - 即便他做的也还不错，但是你如果还是把低绩效的名额给了他，那么你一定是有自己的依据的，所以这个绩效也的确是他应得的，你并不欠他什么。
   - 你有管理者的职业素养，有管理者的工作视角，也有令人信服的评价依据，你做出来的就是最公平和最恰当的决策。所以，你需要考虑的事情是，如何和他达成共识，期待并支持他也可以像其他同事一样，变得更加出色
 - 第三，把绩效沟通当作是承上启下的新起点，而不是末日审判。
-  - 绩效沟通，诚然要对过去的工作表现和成绩做出有理有据的评价，并且在相互探讨中达成共识。
+  - 绩效沟通，诚然要对过去的工作表现和成绩做出有理有据的评价，并且在相互探讨中达成共识。（消除员工心理障碍，让员工认识到过往得结果，大部分都是自己的工作执行不到位造成，自己要负主要责任）
   - 对于低绩效员工来说，如何让这个沟通不那么令人沮丧和压抑呢？
-    - “着眼未来”是个好的做法。即，过去虽然很努力，但是结果却不尽如人意，那么如何能够改变这个状况呢？“往者不可谏，来者犹可追”，你可以引导他多说一些自己对未来的打算，希望接下来做些什么，打算怎做，以及需要哪些支持和帮助。
+    - “着眼未来”是个好的做法。即，过去虽然很努力，但是结果却不尽如人意，那么如何能够改变这个状况呢？“往者不可谏，来者犹可追”，你可以引导他多说一些自己对未来的打算，希望接下来做些什么，打算怎做，以及需要哪些支持和帮助。（总结过往工作的过失，明确未来的工作改进目标和执行计划）
     - 当你和他一起探讨他的发展的时候，会让他觉得“坏消息”属于过去，而未来是有希望的、被信任和支持的。这对双方来说，都是一个更好的起点，不是吗？
     - 在双方对于基本事实都认同的情况下，尤其要避免抓住过去的问题不放，如果把焦点放在对失败的探讨上，会让他感受到末日审判般的沮丧，以及对于改变这种状况的绝望与无助。而用教练式的引导方式，一起做一场着眼未来的、面向长期发展的绩效沟通，就能收获到辅导和激励的效果。
