--- a/architecture/泛问题/团队建设/如何建设团队文化，营造团队氛围？.md
+++ b/architecture/泛问题/团队建设/如何建设团队文化，营造团队氛围？.md
@@ -1,2 +1,39 @@
 # 如何建设团队文化，营造团队氛围？
-钱钟书：你不问我文化是什么的时候，我还知道文化是什么；你问我什么是文化，我反而不知道文化是什么了
+- 关于文化的描述钱钟书：你不问我文化是什么的时候，我还知道文化是什么；你问我什么是文化，我反而不知道文化是什么了
+- 你希望用什么词汇来形容你团队的气质和调性呢？
+- 你最愿意让什么样的员工留在你的团队里呢？
+
+## 团队文化
+对于团队文化本身，没有唯一确定的定义。但是，每个团队，都有一些约定俗成的工作方式和是非判断。在这个团队中，即便没有人告诉你什么是对的、什么是错的，你大体上也清楚什么该做、什么不该做。它虽然不像规章制度那么带有明确而强制性的约束力，却也能引导和规范团队成员的言行举止，我们把这种潜移默化的行为准则和工作作风称为团队文化。
+
+## 鲜明的团队文化及价值观，究竟能给一个团队带来什么呢？
+- 第一，效率。这是由文化的秩序性带来的效果。由于文化里包含着约定俗成的工作标准和决策依据，并且团队成员都对此持有共识，因此不必事事请示上级和彼此确认。
+- 第二，空间。这是由文化的导向性带来的效果。由于文化里约定了团队的价值导向，也就意味着，在符合价值导向的前提下，员工可以自主选择自己的工作手段，甚至是工作内容。这为很多有主动性的员工提供了自主发挥的空间。在“员工激励”一文中我们提到，自主性能够提升员工的投入度，激发员工的自驱力。所以，明确的文化也是激励手段。
+- 第三，归属。这是由文化的筛选性带来的效果。由于团队文化里蕴含着价值观，所以团队文化有“筛选器”的作用。认同该文化的人会不断加入进来，而不认同该文化的人也会逐渐淡出，久而久之，团队里都是对该文化认同度很高的员工。价值认同是一种高层次认同，一旦认同，便具有很好的稳定性和黏性，这种认同为大家带来了深深的团队归属感，共事的员工也更有凝聚力。在盖洛普的“优势理论”中有关于“完美团队”的描述，即，“价值观相同、能力互补的团队”，可见价值观对于团队的重要意义。
+- 第四，耐力。这是由文化的延续性带来的效果。文化对于一个组织，是相对稳定的元素，它能够在新、老员工间传承，并不会因为个别人员的变动而明显变化，除非是团队负责人有调整，才会给团队带来明显影响。
+  - 一个企业或一个团队的文化，对于其稳定性、健壮性及耐力的重要作用。用通俗的话说就是，一个拥有鲜明而稳定的价值观的团队，更扛得住“折腾”。
+
+## 怎么打造自己团队的文化呢？
+- 第一步，“命名它”。其实就是提炼你团队的文化，用合适的词句把它表述出来。看上去非常简单的事情，却有着最为普遍的两大误区。
+  - 第一个误区是“拿来主义”。有些高管看到“别人家的文化”非常好，而且公司做得也很成功，于是就希望直接拿过来作为自己的文化来沿用。但他忽略了一个基本事实就是，一个团队的文化价值观，主要来源于团队负责人或核心管理者。你是什么样的作风和价值观，你团队就会是什么样的，也就是说，你的团队文化和你喜欢什么样的文化关系不大，而和你是什么样的人关系很大。
+    - 反面教材
+      - 面对问题，如果你总是抱怨，那么和团队强调积极文化是不会成功的；
+      - 面对合作，如果你总是对抗，那么和团队强调紧密协作是不会成功的；
+      - 面对工作，如果你总是被动等待，那么和团队强调积极主动是不会成功的；
+      - 面对下属，如果你总是漠不关心，那么和团队强调温暖有爱也是不会成功的。
+    - 你想打造什么样的团队文化，核心是从你身上的优秀品质中提炼，从而把你优秀的特质放大到整个团队。若你身上没有的特质，那就不适合作为团队的文化价值观去培育。
+  - 第二个误区是“越简练越好”。于是很多公司提出的文化价值观就是几个词，比如前面我们提到腾讯的文化价值观是“正直、进取、合作、创新”，这在我眼里就是个反面教材，因为你记不住，就算是记住了，也很快会忘掉，因为很难感知，也太没区分度了。
+    - 文化价值观的描述方式应该是越生动越好，而不是越简练越好，因为目的是为了让大家记住且传播。当然，如果能既生动又简练就更好了。
+      - Google 的“不作恶”，非常简洁而生动；
+      - 百度的“简单可依赖”，也非常容易记忆和传播；
+- 第二步，“主张它”。就是要把你提炼出来的团队文化，宣贯给整个团队成员，甚至还包括上级和合作的兄弟团队。
+- 第三步，“追求它”。这也是最重要的一步。有些员工并不买管理者的账，也不买团队文化的账，认为那就是管理者“洗脑”用的，喊喊口号，没什么实际意义。
+  - 要么是文化提炼的时候，不是从管理者自身提炼的，管理者不能以身作则，做不到言行一致
+  - 要么是没有把团队文化和管理工作结合起来，在员工眼里就是“光说不练”，没法让他们感受到遵照这种文化的益处。
+    - 文化的践行，更多的体现在管理工作中，而不是活动中
+      - 你在和员工约定绩效方案的时候，有没有体现团队文化和价值的内容？
+      - 你在评优和表彰员工的时候，有没有明确体现团队文化价值观？
+      - 你在选拔新人导师的时候，有没有和团队文化挂钩？
+      - 你在项目成功发布的时候，有没有总结团队文化？
+      - 你在辅导和教导员工的时候，是否有提及团队文化？
+    - 日常的管理工作，蕴含着你的团队文化，它其实一直都在。团队文化的打造，并不是要无中生有，而是要把它提炼出来，发挥更大的引导、规范和传承的价值。
