--- a/architecture/常见问题.md
+++ b/architecture/常见问题.md
@@ -78,3 +78,15 @@
 - 说技术实现
   - 在技术实现细节上，要尽量讲出技术的实现原理，不要浮于表面的框架组合。
   - 技术的落地实现方式和深层原理
+
+## 佛祖心与帝王术
+古今但凡成大事者，都是内怀佛祖之心，外行帝王之术
+世俗之人大多是佛祖心常有，帝王术难得，本质是佛祖能征服人心，却征服不了天下，帝王能征服天下，却征服不了人心
+什么是帝王术？帝王术在古代是治国术，驭人术，也叫制衡之术，纵横术，想成事，一定要兼具佛祖心和帝王术
+佛祖心至柔至弱，帝王之术至刚至强，一阴一阳谓之道，物极则必反，要想在这个世界立身处世，十足的善良不行，只玩手段心计也不行，刚柔并济，内怀慈善悲悯，外带杀伐果断，
+以雷霆手段行慈悲之事，不偏不倚，走中庸之道，才能让人立于不败之地，
+帝王术有两点，第一识人术知人善用，为政之本，用人之道，首在识人，次在用人，终在惧人，赏罚分明，扬长补短，用人之所长，避其短及其众人之长
+为己所用，晓之以理，动之以情，第二书驭人术，自述威信，偷梁换柱，下诏罪己，情感诱惑，收买人心，丢卒保车，互相监督，以他排他，核心一点是一定要有大格局大胸怀
+要将自己的境界格局修炼的足够大，能容得下君子，更能容得下小人，万物不为我所有，但万物皆为我所用，
+最后要修炼自己不动心的境界，息怒不形与色，此心不动，随机而动，内有佛祖心肠，外有金刚手段，即可上马提刀杀敌，也可下马诵经念佛，
+拔刀时不留余地，念经时专心一意
