--- a/architecture/推荐系统/1、资料.md
+++ b/architecture/推荐系统/1、资料.md
@@ -19,3 +19,4 @@
 - TensorFlow 
   - https://www.tensorflow.org/tutorials
   - https://tensorflow.google.cn/tutorials/quickstart/beginner
+- 推荐系统 https://github.com/wzhe06/Reco-papers
