--- a/architecture/算法/二叉树.md
+++ b/architecture/算法/二叉树.md
@@ -11,5 +11,9 @@
     - O(n)
     - O(n)
 - Morris遍历
+  - 线索二叉树（中序线索二叉树）
+    - 对一棵二叉树中所有结点的空指针域按照某种遍历方式加线索的过程叫作线索化，被线索化了的二叉树称为线索二叉树(Threaded binary tree)。 
+    - 引入线索二叉树的目的是：加快查找结点前驱和后继的速度。
+    - https://www.bilibili.com/video/BV1po4y1t7Ez/?p=95&spm_id_from=pageDriver&vd_source=e24c8067ba95301ea1a12b6af9d4ddc2
   - O(1)
   - O(n)
